[gd_scene load_steps=4 format=2]

[ext_resource path="res://Terrain/TerrainLine.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainGame.gd" type="Script" id=2]
[ext_resource path="res://UI/InGameUI.tscn" type="PackedScene" id=3]

[node name="MainGame" type="Node2D"]
script = ExtResource( 2 )

[node name="TrajectoryLine" type="Line2D" parent="."]

[node name="TerrainLine" parent="." instance=ExtResource( 1 )]
points = PoolVector2Array(  )

[node name="Players" type="Node2D" parent="."]

[node name="Player1" type="Node2D" parent="Players"]

[node name="Player2" type="Node2D" parent="Players"]

[node name="InGameUI" parent="." instance=ExtResource( 3 )]

[node name="timer" type="Timer" parent="."]

[node name="DummyTargets" type="Node2D" parent="."]

[connection signal="ready" from="." to="." method="_on_MainGame_ready"]
