[gd_scene load_steps=12 format=4 uid="uid://h8vcng8ps4vd"]

[ext_resource type="TileSet" uid="uid://di4l1ben37h3b" path="res://MainGameScene/TerrainTiles/blocks_tileset_16x16.tres" id="1"]
[ext_resource type="Script" path="res://MainGameScene/MainGame.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dmyeg6ldx2orv" path="res://UI/components/vignette/vignette.tscn" id="2_jfj17"]
[ext_resource type="Script" path="res://scripts/players.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://ncuxb50cjisf" path="res://UI/InGameUI/IngameUI_Redesign.tscn" id="5_y7iba"]
[ext_resource type="PackedScene" uid="uid://dx02vnjoiqc0n" path="res://DummyTarget/DummyTargetGroupNode.tscn" id="7"]
[ext_resource type="Script" path="res://DummyTarget/DummyTargetGroupNode.gd" id="8"]
[ext_resource type="Script" path="res://MainGameScene/Background/parallaxLayer.gd" id="9"]
[ext_resource type="Texture2D" uid="uid://d23fg0a10hltc" path="res://MainGameScene/Background/uncolored_plain.png" id="10"]
[ext_resource type="Script" path="res://MainGameScene/TerrainMapGenerator.gd" id="10_uxs7w"]

[sub_resource type="Environment" id="Environment_47r24"]
background_mode = 3
background_color = Color(0.305882, 0.517647, 1, 1)
tonemap_exposure = 0.39
adjustment_enabled = true

[node name="MainGame" type="Node2D"]
script = ExtResource("2")

[node name="Vignette" parent="." groups=["foreground_layer"] instance=ExtResource("2_jfj17")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_47r24")

[node name="parallaxBackground" type="ParallaxBackground" parent="."]

[node name="parallaxLayer" type="ParallaxLayer" parent="parallaxBackground"]
position = Vector2(0, -250)
motion_mirroring = Vector2(1600, 0)
script = ExtResource("9")
CLOUD_SPEED = -50.0

[node name="sprite" type="Sprite2D" parent="parallaxBackground/parallaxLayer"]
scale = Vector2(1.56348, 1)
texture = ExtResource("10")
centered = false

[node name="InGameUI" parent="." instance=ExtResource("5_y7iba")]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Players" type="Node2D" parent="."]

[node name="Player1" type="Node2D" parent="Players"]

[node name="Player2" type="Node2D" parent="Players"]

[node name="Shots" type="Node2D" parent="Players"]
script = ExtResource("4")

[node name="DummyTargetGroupNode" parent="." instance=ExtResource("7")]
script = ExtResource("8")

[node name="TerrainMap" type="TileMap" parent="." groups=["Ground"]]
tile_set = ExtResource("1")
format = 2
script = ExtResource("10_uxs7w")

[node name="LayerTerrain" type="TileMapLayer" parent="TerrainMap" groups=["Ground"]]
use_parent_material = true
tile_set = ExtResource("1")

[node name="LayerCannon" type="TileMapLayer" parent="TerrainMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAALABgACQAAAAAAAQA=")
tile_set = ExtResource("1")

[node name="LayerCastle" type="TileMapLayer" parent="TerrainMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAABwABgAAAAAABgABABQABgAAAAAAAAABABUABgAAAAAABgABABYABgAAAAAABgABABcABgAAAAAABgABABgABgAAAAAABgABABkABgAAAAAABgABABoABgAAAAAABgABABsABgAAAAAABgABABwABgAAAAAAAwACABUABgAAAAAAAAACABcABgAAAAAAAgACABgABgAAAAAAAAACABkABgAAAAAAAAACABoABgAAAAAAAAACABsABgAAAAAAAAACABwABgAAAAAAAwADABQABwAAAAAAAQADABUABgAAAAAABwADABYABgAAAAAABwADABcABgAAAAAABwADABgABgAAAAAABwADABkABgAAAAAAAAADABsABgAAAAAAAAADABwABgAAAAAAAwAEABkABgAAAAAAAAAEABoABgAAAAAABgAEABsABgAAAAAAAAAEABwABgAAAAAAAwAFABgABgAAAAAAAAAFABkABgAAAAAAAAAFABsABgAAAAAAAAAFABwABgAAAAAAAwAGABkABgAAAAAAAAAGABoABgAAAAAABwAGABsABgAAAAAAAAAGABwABgAAAAAAAwAHABgABgAAAAAAAAAHABkABgAAAAAAAAAHABsABgAAAAAAAAAHABwABgAAAAAAAwAIABkABgAAAAAAAAAIABoABgAAAAAABgAIABsABgAAAAAAAAAIABwABgAAAAAAAwAJABgABgAAAAAAAAAJABkABgAAAAAAAAAJABsABgAAAAAAAAAJABwABgAAAAAAAwAKABkABgAAAAAAAAAKABoABgAAAAAABwAKABsABgAAAAAAAAAKABwABgAAAAAAAwALABgABwAAAAAAAQALABkABgAAAAAABwALABoABgAAAAAABwALABsABgAAAAAABwALABwABgAAAAAAAwAMABwABgAAAAAABwA=")
tile_set = ExtResource("1")

[connection signal="ready" from="." to="." method="_on_MainGame_ready"]
[connection signal="ready" from="TerrainMap/LayerCannon/Cannon" to="TerrainMap/LayerCannon/Cannon" method="_on_Cannon_ready"]
